<resources>
    <string name="app_name">MusicHall</string>
    <string name="facebook_app_id">735394053464841</string>
    <string name="fb_login_protocol_scheme">fb735394053464841</string>
    <string name="group_page1">Wall</string>
    <string name="group_page1_add_post">New Post</string>
    <string name="group_page1_add_post_text">Type here your text</string>
    <string name="group_page1_add_post_button">Create the post</string>
    <string name="add">Add</string>
    <string name="create_group">Create the group</string>
    <string name="add_group_name_title">Name of the group : </string>
    <string name="add_post">Create a post</string>
    <string name="load_more_content">Load More</string>

    <string name="group_page2">Chat</string>
    <string name="group_page3">Calendar</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <string name="group">Group</string>

    <string name="add_group">Create a group</string>
    <string name="add_group_placeholder">Search a member</string>
    <string name="add_group_name_placeholder">Name</string>
    <string name="add_group_members">Members : </string>


    <string name="you_sould_login">You should be logged to have access to this functionnality</string>
    //Day's short keyword
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>

    <string name="text_recherche">Qui recherches-tu?</string>
    <string name="groupes">Un groupe</string>
    <string name="musiciens">Des musiciens</string>
    <string name="recherche_musicien">Nom</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="cont_dsc_image_watched">image selected</string>
    <string name="nom_instrument">Nom_instrument</string>
    <string name="default_text">Default text</string>

    <string name="discussions">Discussions</string>
    <string name="unknown">Unknown</string>
    <string name="rechercheTu">Qui recherches-tu?</string>
    <string name="unGroupe">Un groupe</string>
    <string name="desMusiciens">Des musiciens</string>

    <string name="musicHall">MusicHall</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="adresse_mail2">Adresse mail           : </string>
    <string name="mdp">Mot de passe</string>
    <string name="mdpLong">Mot de Passe          : </string>
    <string name="fauxMdp">*********</string>
    <string name="connecter">Connecter</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="connexion">Connexion</string>
    <string name="déconnexion">Déconnexion</string>

    <string name="imageDePresentation">Image de présentation</string>

    <string name="votreMessage">Votre message</string>

    <string name="photoDeProfil">Photo de profil</string>
    <string name="prenomIci">Prénom ici</string>
    <string name="nomIci">Nom ici</string>
    <string name="informations">Informations</string>
    <string name="informationsPrive">Informations privées</string>
    <string name="informationsPublic">Informations public</string>
    <string name="ville">Ville             : </string>
    <string name="saintDenis">Saint-denis</string>

    <string name="niveau">Niveau        : </string>
    <string name="débutant">Débutant</string>
    <string name="motivation">Motivation  : </string>
    <string name="motiv">Motivation</string>
    <string name="amateur">Amateur</string>
    <string name="instruments">Instruments</string>
    <string name="listenedMusicalStyles">Listened musical styles</string>
    <string name="playedMusicalStyles">Played musical styles</string>
    <string name="portfolio">Portfolio</string>
    <string name="startConversation">Start conversation</string>

    <string name="inscription">Inscription</string>
    <string name="confirmMdp">Confirmation mot de passe</string>
    <string name="informationSup">Informations supplémentaires</string>
    <string name="prenom">prenom</string>
    <string name="nom">nom</string>
    <string name="date_de_naissance">Date de naissance  : </string>
    <string name="pasDeDate">Pas de date de naissance</string>
    <string name="formatDate">jj/mm/aaaa</string>
    <string name="genre"> Genre          : </string>
    <string name="femme">Femme</string>
    <string name="homme">Homme</string>
    <string name="inconnu">Inconnu</string>
    <string name="professionnel">Professionnel</string>

    <string name="ajoutElemPortfo">Ajouter un element au portfolio</string>
    <string name="exampleMail">example@gmail.com</string>
    <string name="changerMail">Changer votre adresse mail</string>
    <string name="changerdeMail">Changement d\'adresse email</string>
    <string name="changerMdp">Changer votre mot de passe</string>
    <string name="changerdeMdp">Changement de mot de passe</string>
    <string name="membreDepuis">Membre depuis      : </string>

    <string name="Instruments_pratique">Instruments pratiqués</string>
    <string name="genresEcoutes">Genres musicals écoutés</string>
    <string name="genresEcoute">Genre écouté</string>
    <string name="genresJoue">Genre joué</string>
    <string name="genresJoues">Genres musicals joués</string>

    <string name="nom_complet">Nom complet</string>
    <string name="dateMembre">Date de membre</string>
    <string name="amateurNivInter">Amateur de niveau Intermediaire</string>
    <string name="niv">Niveau</string>
    <string name="distance">A quelle distance ?</string>
    <string name="zeroKm">0 km</string>
    <string name="textDefault">Default Text</string>
    <string name="pleaseWait">Please wait …</string>
    <string name="intermédiaire">Intermédiaire</string>
    <string name="avancé">Avancé</string>
    <string name="expert">Expert</string>
    <string name="maitre">Maître</string>
    <string name="debutant">Débutant</string>
    <string name="intermediaire">Intermédiaire</string>
    <string name="avance">Avancé</string>


    <string-array name="instruments">
        <item name="batterie">Batterie</item>
        <item name="Cajon">Cajon</item>
        <item name="Bodhran">Bodhran</item>
        <item name="Bongos">Bongos</item>
        <item name="Congas">Congas</item>
        <item name="Derbouka">Derbouka</item>
        <item name="Djembe">Djembe</item>
        <item name="Guitare classique">Guitare classique</item>
        <item name="Guitare jazz">Guitare jazz</item>
        <item name="Guitare electrique">Guitare electrique</item>
        <item name="Bass">Bass</item>
        <item name="Piano">Piano</item>
        <item name="Piano electrique">Piano electrique</item>
        <item name="Synthetiseur">Synthetiseur</item>
        <item name="Violon">Violon</item>
        <item name="Alto">Alto</item>
        <item name="Violoncelle">Violoncelle</item>
        <item name="Contrebasse">Contrebasse</item>
        <item name="harpe">Harpe</item>
        <item name="Flute traversiere">Flute traversiere</item>
        <item name="Flute de pan">Flute de pan</item>
        <item name="Flute à bec">Flute à bec</item>
        <item name="Whistle">Whistle</item>
        <item name="Clarinette">Clarinette</item>
        <item name="Accordeon">Accordéon</item>
        <item name="Mandoline">Mandoline</item>
        <item name="Banjo">Banjo</item>
        <item name="Cornemuse">Cornemuse</item>
        <item name="Uilleann pipe">Uilleann pipe</item>
        <item name="Bouzouki grec">Bouzouki grec</item>
        <item name="Bouzouki irlandais">Bouzouki irlandais</item>
        <item name="Ukulele">Ukulele</item>
        <item name="Guitalele">Guitalele</item>
        <item name="Saxophone">Saxophone</item>
        <item name="Trompette">Trompette</item>
        <item name="Cor">Cor</item>
        <item name="Tuba">Tuba</item>
    </string-array>


    <string-array name="genres">
        <item name="Rock">Rock</item>
        <item name="Heavy Metal">Heavy Metal</item>
        <item name="Hard rock">Hard rock</item>
        <item name="Punk rock">Punk rock</item>
        <item name="Punk pop">Punk pop</item>
        <item name="Jazz">Jazz</item>
        <item name="Reggae">Reggae</item>
        <item name="Ska">Ska</item>
        <item name="Country">Country</item>
        <item name="Blues">Blues</item>
        <item name="Pop">Pop</item>
        <item name="Musique classique">Musique classique</item>
        <item name="Folk">Folk</item>
        <item name="Traditionelle">Traditionelle</item>
        <item name="Electro">Electro</item>
        <item name="Gospel">Gospel</item>
        <item name="Funk">Funk</item>
        <item name="Musique du monde">Musique du monde</item>
        <item name="Soul">Soul</item>
        <item name="Rap">Rap</item>
        <item name="Hip Hop">Hip Hop</item>
        <item name="Salsa">Salsa</item>
        <item name="Musique Latine">Musique Latine</item>
        <item name="Rock alternatif">Rock alternatif</item>
        <item name="Musique Experimentale">Musique Experimentale</item>
    </string-array>

    <string-array name="niveaux">
        <item name="Debutant">Débutant</item>
        <item name="Intermediaire">Intermediaire</item>
        <item name="Avance">Avancé</item>
        <item name="Expert">Expert</item>
        <item name="Maitre">Maître</item>
    </string-array>

</resources>
